# python-oscquery

./: .gitignore  README.md  pyproject.toml  tinytest.py
.github/: dependabot.yml
.github/workflows/: publish.yml  publish_test.yml  python-package.yml
examples/: example_oscquery_client.py  example_oscquery_server_with_python-osc_integration.py  example_oscquery_standalone_server.py
src/: example_oscquery_server_with_python-osc_integration.py  example_oscquery_standalone_server.py
src/pythonoscquery/: osc_query_service.py  pythonosc_callback_wrapper.py
src/tinyoscquery/: osc_handler_wrapper.py  osc_query_browser.py  osc_query_service.py  pythonosc_callback_wrapper.py
src/tinyoscquery/shared/: osc_addressspace.py  osc_host_info.py  osc_namespace.py  osc_path_node.py
tests/: test_callback_wrapper.py  test_handler_wrapper.py  test_osc_addressspace.py  test_osc_host_info.py  test_osc_namespace.py  test_osc_path_node.py  test_osc_queryservice.py
tinyoscquery/: osc_query_client.py  osc_query_service.py  query.py  queryservice.py
tinyoscquery/shared/: host_info.py  node.py  osc_path_node.py
